Feature: dashboard and Fix: dowloands