@@ -1,10 +1,14 @@
 package com.GDU.backend.services.Impl;
 
+import com.GDU.backend.dtos.requests.DownloadDTO;
 import com.GDU.backend.dtos.requests.FilterRequestDTO;
 import com.GDU.backend.dtos.requests.RecommendationRequestDTO;
 import com.GDU.backend.dtos.requests.UploadRequestDTO;
 import com.GDU.backend.dtos.responses.DocumentResponseDTO;
 import com.GDU.backend.dtos.responses.TotalResponse;
+import com.GDU.backend.dtos.responses.UserResponse;
+import com.GDU.backend.dtos.responses.DocumentMonthly;
+import com.GDU.backend.dtos.responses.TypeDocumentRes;
 import com.GDU.backend.dtos.responses.UserResponse;
 import com.GDU.backend.exceptions.ResourceNotFoundException;
 import com.GDU.backend.models.*;
@@ -21,6 +25,8 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import javax.imageio.ImageIO;
+import javax.swing.text.html.parser.DocumentParser;
+
 import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.IOException;
@@ -33,6 +39,7 @@ import java.time.LocalDate;
 import java.util.Comparator;
 import java.util.Date;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -44,8 +51,10 @@ public class DocumentServiceImpl implements DocumentService {
     private final CategoryRepository categoryRepository;
     private final SpecializedRepository specializedRepository;
     private final UserServiceImpl userService;
+    private final UserRepository userRepository;
     private final SubjectRepository subjectRepository;
     private final SubjectDocumentRepository subjectDocumentRepository;
+    private final DownloadsRepository downloadsRepository;
 
     @Override
     public String uploadDocument(UploadRequestDTO uploadRequestDTO) throws IOException {
@@ -54,10 +63,10 @@ public class DocumentServiceImpl implements DocumentService {
                 .orElseThrow(() -> new ResourceNotFoundException("Category not found"));
         Specialized specialized = specializedRepository.findById(uploadRequestDTO.getSpecialized())
                 .orElseThrow(() -> new ResourceNotFoundException("Specialized not found"));
-        
+
         Subject subject = subjectRepository.findById(uploadRequestDTO.getSubject())
                 .orElseThrow(() -> new ResourceNotFoundException("Subject not found"));
-        
+
         User userUpload = userService.getUserByStaffCode(uploadRequestDTO.getUserUpload());
         // generate file name and path
         String fileName = System.currentTimeMillis() + "_" + uploadRequestDTO.getDocument().getOriginalFilename();
@@ -68,7 +77,7 @@ public class DocumentServiceImpl implements DocumentService {
         Path uploadDir = Paths.get(UPLOAD_DIR);
         Files.createDirectories(uploadDir);
         Files.copy(multipartFile.getInputStream(), destFile.toPath(), StandardCopyOption.REPLACE_EXISTING);
-        
+
         int numberOfPages = 0;
         String thumbnail = "";
 
@@ -76,7 +85,8 @@ public class DocumentServiceImpl implements DocumentService {
         if (uploadRequestDTO.getDocument().getOriginalFilename().endsWith(".pdf")) {
             numberOfPages = calculateNumberOfPages(uploadRequestDTO.getDocument().getInputStream());
             thumbnail = generateThumbnail(uploadRequestDTO.getDocument().getInputStream());
-        } else if (uploadRequestDTO.getDocument().getOriginalFilename().endsWith(".docx") || uploadRequestDTO.getDocument().getOriginalFilename().endsWith(".doc")) {
+        } else if (uploadRequestDTO.getDocument().getOriginalFilename().endsWith(".docx")
+                || uploadRequestDTO.getDocument().getOriginalFilename().endsWith(".doc")) {
             try {
                 File file = new File(destFile.getAbsolutePath());
                 System.out.println(file.isFile());
@@ -101,7 +111,8 @@ public class DocumentServiceImpl implements DocumentService {
                 .category(category)
                 .thumbnail(thumbnail)
                 .subject(subject)
-//                .specialized(specialized)
+                .status("draft")
+                // .specialized(specialized)
                 .uploadDate(LocalDate.now())
                 .build();
         documentRepository.save(newDocument);
@@ -156,46 +167,43 @@ public class DocumentServiceImpl implements DocumentService {
         // Update document
         existDocument.setCategory(category);
         existDocument.setTitle(
-                uploadRequestDTO.getTitle() != null ?
-                        uploadRequestDTO.getTitle() :
-                        existDocument.getTitle()
-        );
+                uploadRequestDTO.getTitle() != null ? uploadRequestDTO.getTitle() : existDocument.getTitle());
         existDocument.setSlug(
-                uploadRequestDTO.getTitle() != null ?
-                        uploadRequestDTO.getTitle()
-                                .replace(" ", "-")
-                                .toLowerCase() + "-" + new Date().getTime() :
-                        existDocument.getSlug()
-        );
-//        existDocument.setSpecialized(existDocument.getSpecialized());
+                uploadRequestDTO.getTitle() != null ? uploadRequestDTO.getTitle()
+                        .replace(" ", "-")
+                        .toLowerCase() + "-" + new Date().getTime() : existDocument.getSlug());
+        // existDocument.setSpecialized(existDocument.getSpecialized());
 
-        // I think we don't need update a document file 
+        // I think we don't need update a document file
         // any more because we should upload a new one instead
 
         // Handle Path
-//        if (uploadRequestDTO.getDocument() != null) {
-//            existDocument.setDocument_type(uploadRequestDTO.getDocument().getContentType());
-//            existDocument.setDocument_size(uploadRequestDTO.getDocument().getSize() / 1_000_000);
-//
-//            String fileName = System.currentTimeMillis() + "_" + uploadRequestDTO.getDocument().getOriginalFilename();
-//            File destFile = new File(UPLOAD_DIR + fileName);
-//
-//            // Save the uploaded document to the file system
-//            MultipartFile multipartFile = uploadRequestDTO.getDocument();
-//            Path uploadDir = Paths.get(UPLOAD_DIR);
-//            try {
-//                Files.createDirectories(uploadDir);
-//            } catch (IOException e) {
-//                log.error("Error creating directories: {}", e.getMessage());
-//            }
-//            try {
-//                Files.copy(multipartFile.getInputStream(), destFile.toPath(), StandardCopyOption.REPLACE_EXISTING);
-//            } catch (IOException e) {
-//                log.error("Error copying file: {}", e.getMessage());
-//            }
-//
-//            existDocument.setPath(destFile.getAbsolutePath());
-//        }
+        // if (uploadRequestDTO.getDocument() != null) {
+        // existDocument.setDocument_type(uploadRequestDTO.getDocument().getContentType());
+        // existDocument.setDocument_size(uploadRequestDTO.getDocument().getSize() /
+        // 1_000_000);
+        //
+        // String fileName = System.currentTimeMillis() + "_" +
+        // uploadRequestDTO.getDocument().getOriginalFilename();
+        // File destFile = new File(UPLOAD_DIR + fileName);
+        //
+        // // Save the uploaded document to the file system
+        // MultipartFile multipartFile = uploadRequestDTO.getDocument();
+        // Path uploadDir = Paths.get(UPLOAD_DIR);
+        // try {
+        // Files.createDirectories(uploadDir);
+        // } catch (IOException e) {
+        // log.error("Error creating directories: {}", e.getMessage());
+        // }
+        // try {
+        // Files.copy(multipartFile.getInputStream(), destFile.toPath(),
+        // StandardCopyOption.REPLACE_EXISTING);
+        // } catch (IOException e) {
+        // log.error("Error copying file: {}", e.getMessage());
+        // }
+        //
+        // existDocument.setPath(destFile.getAbsolutePath());
+        // }
         documentRepository.save(existDocument);
         return "Update document successfully";
     }
@@ -251,26 +259,39 @@ public class DocumentServiceImpl implements DocumentService {
                 .stream().map(this::convertToDocumentResponse).toList();
     }
 
-    public String updateDownloadCount(Long id) {
-        Document existsDocument = documentRepository.findById(id).orElse(null);
-        if (existsDocument == null) {
-            return "Document is not existing";
-        }
+    public String updateDownloadCount(DownloadDTO downloadDTO) {
+        try {
+            System.out.println(downloadDTO);
+            Document existsDocument = documentRepository.findById(downloadDTO.getDocumentId()).orElseThrow(
+                    () -> new ResourceNotFoundException("Document not found"));
+            User existUser = userRepository.findById(downloadDTO.getUserId())
+                    .orElseThrow(() -> new ResourceNotFoundException("User not found"));
 
-        existsDocument.setDownload(existsDocument.getDownload() + 1);
-        documentRepository.save(existsDocument);
-        return "Update downloads success";
+            existsDocument.setDownload(existsDocument.getDownload() + 1);
+            Downloads downloads = Downloads.builder().document(existsDocument).user(existUser).build();
+            downloadsRepository.save(downloads);
+            documentRepository.save(existsDocument);
+            return "Update downloads success";
+
+        } catch (Exception e) {
+            throw new UnsupportedOperationException("Unimplemented method updateView " + e.getMessage());
+        }
     }
 
     @Override
     public String updateViewCount(Long id) {
-        Document existsDocument = documentRepository.findById(id).orElse(null);
-        if (existsDocument == null) {
-            return "Document is not existing";
+        try {
+            Document existsDocument = documentRepository.findById(id).orElse(null);
+            if (existsDocument == null) {
+                return "Document is not existing";
+            }
+            existsDocument.setViews(existsDocument.getViews() + 1);
+            documentRepository.save(existsDocument);
+            return "Update views success";
+
+        } catch (Exception e) {
+            throw new UnsupportedOperationException("Unimplemented method updateView " + e.getMessage());
         }
-        existsDocument.setViews(existsDocument.getViews() + 1);
-        documentRepository.save(existsDocument);
-        return "Update views success";
     }
 
     @Override
@@ -278,44 +299,45 @@ public class DocumentServiceImpl implements DocumentService {
         // return list document which have a same specialized and category, title or
         // author
         return documentRepository.getDocumentsSuggested(
-                        recommendationRequestDTO.getSpecialized(),
-                        recommendationRequestDTO.getCategory(),
-                        recommendationRequestDTO.getTitle(),
-                        recommendationRequestDTO.getAuthor()
-                )
+                recommendationRequestDTO.getSpecialized(),
+                recommendationRequestDTO.getCategory(),
+                recommendationRequestDTO.getTitle(),
+                recommendationRequestDTO.getAuthor())
                 .stream().map(this::convertToDocumentResponse).toList();
     }
 
     @Override
     public List<DocumentResponseDTO> filterDocuments(FilterRequestDTO filterRequestDTO) {
-        List<Document> documents = documentRepository.getDocumentsByFilter(
-                filterRequestDTO.getDepartmentSlug(),
-                filterRequestDTO.getSearchTerm(),
-                filterRequestDTO.getSubjectName(),
-                filterRequestDTO.getSpecializedSlug(),
-                filterRequestDTO.getCategoryName()
-        );
+        try {
+            List<Document> documents = documentRepository.getDocumentsByFilter(
+                    filterRequestDTO.getDepartmentSlug(),
+                    filterRequestDTO.getSearchTerm(),
+                    filterRequestDTO.getSubjectName(),
+                    filterRequestDTO.getSpecializedSlug(),
+                    filterRequestDTO.getCategoryName());
 
-        // Sort documents
-        if (filterRequestDTO.getOrder() != null) {
-            if (filterRequestDTO.getOrder().equalsIgnoreCase("most-viewed")) {
-                documents.sort(Comparator.comparing(Document::getViews).reversed());
+            // Sort documents
+            if (filterRequestDTO.getOrder() != null) {
+                if (filterRequestDTO.getOrder().equalsIgnoreCase("most-viewed")) {
+                    documents.sort(Comparator.comparing(Document::getViews).reversed());
+                }
+                if (filterRequestDTO.getOrder().equalsIgnoreCase("most-downloaded")) {
+                    // Filter documents with download > 0 first
+                    // Update documents with filtered and sorted list
+                    documents = documents.stream()
+                            .filter(document -> document.getDownload() > 0)
+                            .sorted(Comparator.comparing(Document::getDownload)
+                                    .reversed())
+                            .collect(Collectors.toList());
+                }
+                if (filterRequestDTO.getOrder().equalsIgnoreCase("latest")) {
+                    documents.sort(Comparator.comparing(Document::getId).reversed());
+                }
             }
-            if (filterRequestDTO.getOrder().equalsIgnoreCase("most-downloaded")) {
-                // Filter documents with download > 0 first
-                // Update documents with filtered and sorted list
-                documents = documents.stream()
-                        .filter(document -> document.getDownload() > 0)
-                        .sorted(Comparator.comparing(Document::getDownload)
-                                .reversed()).collect(Collectors.toList());
-            }
-            if (filterRequestDTO.getOrder().equalsIgnoreCase("latest")) {
-                documents.sort(Comparator.comparing(Document::getId).reversed());
-            }
-        } else {
-            documents.sort(Comparator.comparing(Document::getId).reversed());
+            return documents.stream().map(this::convertToDocumentResponse).toList();
+        } catch (Exception e) {
+            throw new UnsupportedOperationException("Unimplemented method fillter documents " + e.getMessage());
         }
-        return documents.stream().map(this::convertToDocumentResponse).toList();
     }
 
     @Override
@@ -357,7 +379,11 @@ public class DocumentServiceImpl implements DocumentService {
 
     @Override
     public int countAllDocuments() {
-        return documentRepository.countAllDocuments();
+        try {
+            return documentRepository.countAllDocuments();
+        } catch (Exception e) {
+            throw new UnsupportedOperationException("Unimplemented method countAllDocuments: " + e.getMessage());
+        }
     }
 
     @Override
@@ -390,12 +416,127 @@ public class DocumentServiceImpl implements DocumentService {
                 .upload_date(document.getUploadDate())
                 .subject(document.getSubject())
                 .path(document.getPath())
+                .status(document.getStatus())
                 .thumbnail(document.getThumbnail())
                 .pages(document.getPages())
                 .description(document.getDescription())
                 .document_type(document.getDocumentType())
                 .document_size(document.getDocumentSize())
                 .build();
+    }
+
+    @Override
+    public List<DocumentResponseDTO> getDraftDocument() {
+        return documentRepository.findDraftDocuments().stream().map(this::convertToDocumentResponse).toList();
+    }
+
+    @Override
+    public List<DocumentResponseDTO> getPublishedDocument() {
+        return documentRepository.findPublishedDocuments().stream().map(this::convertToDocumentResponse).toList();
+    }
+
+    @Override
+    public String AcceptDocument(Long id) throws IOException {
+        try {
+            Document document = documentRepository.findById(id)
+                    .orElseThrow(() -> new ResourceNotFoundException("Document not found"));
+            if (document.getStatus().equalsIgnoreCase("published")) {
+                throw new ResourceNotFoundException("Document has published");
+            }
+            document.setStatus("published");
+            documentRepository.save(document);
+            return "Accept Document with id: " + id + " success";
+        } catch (Exception e) {
+            throw new UnsupportedOperationException("Unimplemented method Accept Docs: " + e.getMessage());
+        }
+    }
+
+    @Override
+    public String AcceptListDocument(List<Long> ids) throws IOException {
+        try {
+            for (Long id : ids) {
+                Document document = documentRepository.findById(id)
+                        .orElseThrow(() -> new ResourceNotFoundException("Document not found with id: " + id));
+                if (document.getStatus().equalsIgnoreCase("published")) {
+                    throw new ResourceNotFoundException("Document has published");
+                }
+                document.setStatus("published");
+                documentRepository.save(document);
+
+            }
+            return "Accept Document with id: " + ids + " success";
+        } catch (Exception e) {
+            throw new UnsupportedOperationException("Unimplemented method Accept Docs: " + e.getMessage());
+        }
+    }
+
+    @Override
+    public List<DocumentMonthly> countDocumentsMonthly() {
+        try {
+            return documentRepository.countDocumentsMonthly();
+        } catch (Exception e) {
+            throw new UnsupportedOperationException("Unimplemented method count Docs: " + e.getMessage());
+        }
+    }
+
+    @Override
+    public int countDocumentsToday() {
+        try {
+            return documentRepository.countDocumentsToday();
+        } catch (Exception e) {
+            throw new UnsupportedOperationException("Unimplemented method count Docs: " + e.getMessage());
+        }
+    }
+
+    @Override
+    public int countPublishedDocuments() {
+        try {
+            return documentRepository.countPublishedDocuments();
+        } catch (Exception e) {
+            throw new UnsupportedOperationException("Unimplemented method count Docs: " + e.getMessage());
+        }
+    }
+
+    @Override
+    public int countDraftDocuments() {
+        try {
+            return documentRepository.countDraftDocuments();
+        } catch (Exception e) {
+            throw new UnsupportedOperationException("Unimplemented method count Docs: " + e.getMessage());
+        }
+    }
+
+    @Override
+    public List<TypeDocumentRes> countDocumentsByType() {
+        try {
+            return documentRepository.countDocumentsByType();
+        } catch (Exception e) {
+            throw new UnsupportedOperationException("Unimplemented method count Docs: " + e.getMessage());
+        }
+    }
+
+    @Override
+    public List<DocumentResponseDTO> getTop3Documents() {
+        try {
+
+            return documentRepository.getTop3Docs().stream().map(this::convertToDocumentResponse).toList();
+
+        } catch (Exception e) {
+            throw new UnsupportedOperationException("Unimplemented method count Docs: " + e.getMessage());
+        }
+    }
+
+    @Override
+    public List<DocumentResponseDTO> getPaginationDocs(int page) {
+        try {
+            int pageSize = 10;
+            int offset = (page - 1) * pageSize;
+            return documentRepository.getPaginationDocuments(offset).stream().map(this::convertToDocumentResponse)
+                    .toList();
+
+        } catch (Exception e) {
+            throw new UnsupportedOperationException("Unimplemented method pagination Docs: " + e.getMessage());
+        }
     }
 
 }
